Fix homepage on mobile devices

--- a/src/assets/sass/components/home.scss
+++ b/src/assets/sass/components/home.scss
@@ -76,7 +76,7 @@ body {
         img {
             height: 500px;
             margin: 4rem 0 4rem 4rem;
-            box-shadow: $primary-shadow
+            box-shadow: $primary-shadow;
         }
 
         .book-container-texts {
@@ -110,6 +110,25 @@ body {
                 border: none;
                 margin-top: 1rem;
                 box-shadow: $btn-shadow;
+            }
+        }
+
+        // Media queries
+        @media only screen and (max-width: 768px) {
+            color: $dark;
+            position: relative;
+
+            img {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, 20%);
+                height: 450px;
+                margin: 0;
+            }
+
+            .book-container-texts {
+                display: none;
             }
         }
     }
